samples/_failures_safe/1761291364_b50b22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_421a8c60.c: In function ‘main’:
./samples/SAFE/__tmp_421a8c60.c:178:25: error: missing terminating " character
  178 |         fprintf(stderr, "Failed to token
      |                         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_421a8c60.c:178:9: error: expected expression at end of input
  178 |         fprintf(stderr, "Failed to token
      |         ^~~~~~~
./samples/SAFE/__tmp_421a8c60.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_421a8c60.c:178:9: error: expected declaration or statement at end of input
